--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+.scrollbar::-webkit-scrollbar{
+  display: none;
+}
+.scrollbar{
+  scrollbar-width: none;
+}
